--- a/html/desktop.html
+++ b/html/desktop.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (desktop.psd) -->
-<table id="Table_01" width="1560" height="3000" border="0" cellpadding="0" cellspacing="0">
+<table id="Table_01" width="1560" height="3000" border="0" cellpadding="0" cellspacing="0" align="center">
 	<tr>
 		<td colspan="6">
 			<img src="images/desktop_01.gif" width="1559" height="35" alt=""></td>
