--- a/html/laptop.html
+++ b/html/laptop.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (laptop.psd) -->
-<table id="Table_01" width="1560" height="3001" border="0" cellpadding="0" cellspacing="0">
+<table id="Table_01" width="1560" height="3001" border="0" cellpadding="0" cellspacing="0" align="center">
 	<tr>
 		<td colspan="7">
 			<img src="images/laptop_01.gif" width="1559" height="35" alt=""></td>
